--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,15 @@
 == Welcome PersonalBlog - a blog engine written in Rails
 
+This is a blog engine for personal use.
+
+Usage:
+       <tt>git clone https://github.com/stryper/personal_blog.git</tt> 
+
+Before deployment, go into <tt>app/models/user.rb</tt>  and uncomment the <tt>registerable</tt>  so
+that you can register for an account later on. After that, comment it again if 
+you don't want people to sign up and use your database.
+
+
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
 
