--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,23 @@
 == Welcome PersonalBlog - a blog engine written in Rails
 
-This is a blog engine for personal use.
+This is a blog engine for personal use. You can grasp a copy of the source code, deploy it on your own and use it.
 
-Usage:
+1. To get the project, simply do:
        git clone https://github.com/stryper/personal_blog.git
 
-Before deployment, go into <tt>app/models/user.rb</tt>  and uncomment the <tt>registerable</tt>  so
-that you can register for an account later on. When you are done with deployment, got to 
-<tt>your_host_machine/users/sign_up</tt> and sign up for an account. After that, comment it again if 
-you don't want people to sign up and use your database. Go to <tt>your_host_machine/users/sign_in</tt>
-to sign in.
+
+2. Before deployment, go into <tt>app/models/user.rb</tt>  and uncomment the <tt>registerable</tt>  so
+that you can register for an account when the app is up and running. 
+3. After you finish deploying, go to <tt>your_host_machine/users/sign_up</tt> and sign up for an account. 
+4. Then, going to the source code, comment the  <tt>registerable</tt>  again if you don't want people to sign up and use your database. 
+5. Go to <tt>your_host_machine/users/sign_in</tt> to sign in.
+
+For deployment, I recommend Heroku.com because it is free and it is very stable. You can find a tutorial
+about deploying Rails app on Heroku here:
+
+http://railsapps.github.com/rails-heroku-tutorial.html
+
+Have fun!
 
 -----------------------------------------------------------------------------------------------------
 
