--- a/README.rdoc
+++ b/README.rdoc
@@ -8,14 +8,18 @@ This is a blog engine for personal use. You can grasp a copy of the source code,
 
 2. Before deployment, go into <tt>app/models/user.rb</tt>  and uncomment the <tt>registerable</tt>  so
 that you can register for an account when the app is up and running. 
-3. After you finish deploying, go to <tt>your_host_machine/users/sign_up</tt> and sign up for an account. 
-4. Then, going to the source code, comment the  <tt>registerable</tt>  again if you don't want people to sign up and use your database. 
-5. Go to <tt>your_host_machine/users/sign_in</tt> to sign in.
+3. Commit the change.
+4. After you finish deploying, go to <tt>your_host_machine/users/sign_up</tt> and sign up for an account. 
+5. Then, going to the source code, comment the  <tt>registerable</tt>  again if you don't want people to sign up and use your database. 
+6. Push the changes to your app server one more time.
+7. Go to <tt>your_host_machine/users/sign_in</tt> to sign in.
 
 For deployment, I recommend Heroku.com because it is free and it is very stable. You can find a tutorial
 about deploying Rails app on Heroku here:
+			http://railsapps.github.com/rails-heroku-tutorial.html
 
-http://railsapps.github.com/rails-heroku-tutorial.html
+I assume you are familiar with Git. If not, you can look it up here:
+			http://git-scm.com/
 
 Have fun!
 
