--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,7 @@
 
 This is a blog engine for personal use. You can grasp a copy of the source code, deploy it on your own and use it.
 
-1. To get the project, simply do:
-       git clone https://github.com/qen37/personal_blog.git
-
+1. To get the project, clone this project.
 
 2. Before deployment, go into <tt>app/models/user.rb</tt>  and uncomment the <tt>registerable</tt>  so that you can register for an account when the app is up and running. 
 3. Commit the change.
